<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_bringup</name>
  <version>0.0.0</version>
  <description>Integrated bringup for the Arctos calibration framework</description>
  <maintainer email="ajzalbhavans@gmail.com">Ajzal Ashraf</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>arctos_twin</exec_depend>
  <exec_depend>arctos_perception</exec_depend>
  <exec_depend>arctos_calibration</exec_depend>
  <exec_depend>arctos_evaluation</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
